travis: upgrade vs install coreutils

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ osx_image:
 install:
   - brew tap aerickson/clamp
   # install coreutils for testing, but unlink so we have to explicitly use it
-  - brew install coreutils
+  - brew upgrade coreutils
   - brew unlink coreutils
 
 #before_script:
